--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,8 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+
+# IntelliJ IDEA project files
+.idea/
+*.ipr
+*.iml
